# fast_share

./: .gitignore  README.md  cmake_install.cmake  pubspec.yaml
android/app/: build.gradle
assets/translations/: en.json  zh-CN.json
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: init.dart  main.dart  permission_handler.dart
lib/enum/: view_state.dart
lib/logger/: logger.dart
lib/model/: homeVideModel.dart
lib/provider/: base_model.dart  base_view.dart  getit.dart
lib/routes/: routes.dart
lib/service/: navigation_service.dart
lib/themes/: themes.dart
lib/views/: avatar.dart  circle.dart  home.dart  radar.dart
lib/widget/: responsive_builder.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/: Podfile
macos/Runner/: DebugProfile.entitlements  Info.plist
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  build.rs  command.proto
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs
rust/src/api/: api.rs  command.rs  mod.rs  simple.rs
rust/src/api/core/: core.rs
rust/src/core/: core.rs  utils.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_just_share.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_just_share.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+17 files in other folders)
