[package]
name = "rust_lib_just_share"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.24"
lazy_static = { version = "1.4.0", features = ["spin"] }
tokio = { version = "1.36.0", features = ["full"] }
prost = "0.12.3"
bytes = "1.5.0"
md5 = "0.7.0"
env_logger = "0.11.2"
log = "0.4.20"

[build-dependencies]
prost-build = { version = "0.12.3" }
